--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,17 +1,31 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 600px) and (max-width: 799px){
     main{
         width: 80vw;
     }
     main div#imagem{
         float: left;
-        width: 20%;
+        width: 30%;
         height: 100%;
     }
     #conteudo{
         float: right;
-        width: 80%;
+        width: 70%;
         transform: translateY(50%);
+    }
+}
+@media screen and (min-width: 800px){
+    main{
+        width: 900px;
+    }
+    main div#imagem{
+        float: left;
+        width: 50%;
+        height: 100%;
+    }
+    #conteudo{
+        float: right;
+        width: 50%;
     }
 }
